--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -45,7 +45,7 @@
 @media (max-width: 768px) {
   .carousel {
     width: 100%;
-    height: 150px; /* Ajusta la altura según sea necesario para pantallas pequeñas */
+    height: 10vw; /* Ajusta la altura según sea necesario para pantallas pequeñas */
   }
 
   .carousel-button {
