--- a/src/components/Main/Noticia/NoticiaDetalle.css
+++ b/src/components/Main/Noticia/NoticiaDetalle.css
@@ -90,9 +90,13 @@
 
 
 /* Estilo para pantallas más pequeñas */
-@media (max-width: 600px) {
+@media (max-width: 768px) {
     .detalle-noticia {
         padding: 15px; /* Menos padding en móviles */
+    }
+    .slider-image {
+        max-width: 100%; 
+        height: 60vw; /* Mantener la relación de aspecto */
     }
 
     .detalle-noticia h2 {
