--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,10 +2,15 @@ footer{
   grid-area: footer;
     width: 100%;
     display: flex;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     transition: transform 0.3s ease-in-out;
     font-size: 4vw;
+}
+footer p{
+  color: white;
+  font-size: 1vw;
 }
 
 @media (max-width: 768px) {
