--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,10 +5,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  /* background-color: rgb(250, 250, 250); */
   color: rgb(250, 250, 250);
   background-color: rgb(31, 51, 93);
-  /* color: rgb(31, 51, 93); */
 }
 
 .header img {
@@ -31,8 +29,6 @@
 
 .nav ul li a {
   color: rgb(250, 250, 250);
-
-  /* color: rgb(31, 51, 93); */
   text-decoration: none;
 }
 
@@ -65,22 +61,27 @@
 
   .nav {
     width: 100%;
+    position: absolute; /* Asegura que el menú esté por encima de otros elementos */
+    margin-top: 25vw;    
+    left: 0;
+    right: 0;
+    background-color: rgb(31, 51, 93) ;
+    z-index: 9999; /* Establece un valor alto para asegurarse de que esté por encima de otros elementos */
+    display: none;  /* El menú está oculto por defecto */
+    transform: translateY(-100%); /* El menú empieza fuera de la pantalla */
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .nav.open {
+    display: block;
+    transform: translateY(0); /* Muestra el menú */
   }
 
   .nav ul {
     flex-direction: column;
-    position: absolute;
-    margin: 0 auto;
-    top: 100px;
-    left: 0;
-    right: 0;
     width: 100%;
-    transform: translateY(-100%);
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .nav.open ul {
-    transform: translateY(0);
+    margin: 0 auto;
+    padding: 0;
   }
 
   .nav ul li {
@@ -90,20 +91,11 @@
 
   .menu-toggle {
     display: block;
-  color: rgb(250, 250, 250);
-    /* color: rgb(31, 51, 93); */
+    color: rgb(250, 250, 250);
     font-size: 10vw;
   }
 
   .menu-toggle.hidden {
     display: none;
-  }
-
-  .nav {
-    display: none;
-  }
-
-  .nav.open {
-    display: block;
   }
 }
