--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -62,7 +62,7 @@
   .nav {
     width: 100%;
     position: absolute; /* Asegura que el menú esté por encima de otros elementos */
-    margin-top: 25vw;    
+    margin-top: 55vw;    
     left: 0;
     right: 0;
     background-color: rgb(31, 51, 93) ;
@@ -86,6 +86,7 @@
 
   .nav ul li {
     text-align: center;
+    font-size: 8vw;
     margin: 10px 0;
   }
 
