--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -122,24 +122,31 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5);
     display: flex;
-    justify-content: center;
     align-items: center;
-    z-index: 10000; /* Mayor que el header */
-    transition: opacity 0.3s ease;
+    justify-content: center;
+    overflow: hidden;
+    z-index: 10000; /* Asegura que el modal esté por encima del header */
 }
 
 .modal-content {
-    background-color: white;
+    background: white;
     padding: 20px;
-    width: 70%;
-    max-width: 800px;
+    width: 90%;
+    max-width: 600px;
+    max-height: 90vh;
+    overflow-y: auto;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     position: relative;
-    z-index: 10001; /* Asegura que el contenido esté sobre el fondo del modal */
 }
+
+
+.modal-body {
+    flex: 1;
+    overflow-y: auto;
+}
+
 
 .modal-content h1 {
     font-size: 24px;
